# chatgpt-telegram-bot

./: .env_example  .pre-commit-config.yaml  Procfile  README.md  chatgpt_communication.db  chatgpt_own_bot.pkl  exceptions.py  gpt_model.py  main.py  pyproject.toml  requirements.txt
database_repo_telegram/: client.py  models.py
telegram_client/: client_methods.py  constants.py  conversation_handler_factory.py  telegram_client.py  utils.py
